--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -23,7 +23,7 @@
 "Percentage","Pourcentage"
 "%1: Captured amount of %2 online.","%1: Montant capturé en ligne de %2."
 "Matched Expression","Regexp"
-"Access your <a href="%1">Monext Administrative Center</a> in order to manage your Payline account, check follow transactions or check technical issues.","Accédez à votre <a href="%1"> Centre administratif Monext </a> pour gérer votre compte Payline, vérifier les transactions de suivi ou vérifier les problèmes techniques."
+"Access your <a href=""%1"">Monext Administrative Center</a> in order to manage your Payline account, check follow transactions or check technical issues.","Accédez à votre <a href=""%1""> Centre administratif Monext </a> pour gérer votre compte Payline, vérifier les transactions de suivi ou vérifier les problèmes techniques."
 "Select payments in your shopping cart. Payline will process your card payments through the Payline Gateway or the widget.","Sélectionnez les paiements dans votre panier. Payline traitera vos paiements par carte via la passerelle Payline ou le widget."
 "Type of Integration","Type d'intégration"
 "Affichage Inshop","Visuel du widget"
@@ -41,3 +41,5 @@
 "Invalid contract","Contrat de paiement non valide"
 "Payline card type logo url does not exists.","Le logo pour le type de paiement n'existe pas"
 "ERROR for order ; payment gateway amount %1 does not match order amount %2.","ERREUR pour la commande; le montant de la passerelle de paiement de %1 ne correspond pas au montant de la commande de %2."
+"Tansaction already exist for this order. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored","Tansaction already exist for this order. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored"
+"Transaction already exists for this order","Une transaction existe déja pour cette commande"
