#25275: Avoid order creation when there is no transaction

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -7,3 +7,4 @@
 "Click here if you are not redirected within 10 seconds...","Click here if you are not redirected within 10 seconds..."
 "Tansaction already exist for this order. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored","Tansaction already exist for this order. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored"
 "Transaction already exists for this order","Transaction already exists for this order"
+"Cannot retrieve valid customer cart.","Cannot retrieve valid customer cart."
