--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -25,7 +25,7 @@
 "Percentage","Pourcentage"
 "%1: Captured amount of %2 online.","%1: Montant capturé en ligne de %2."
 "Matched Expression","Regexp"
-"Access your <a href=""%1"">Monext Administrative Center</a> in order to manage your Payline account, check follow transactions or check technical issues.","Accédez à votre <a href=""%1""> Centre administratif Monext </a> pour gérer votre compte Payline, vérifier les transactions de suivi ou vérifier les problèmes techniques."
+"<div class=""monext-payment-logo""></div><div class=""monext-payment-byline"">Access your <a href=""%1"">Monext Administrative Center</a> in order to manage your Payline account, check follow transactions or check technical issues.</div>","<div class=""monext-payment-logo""></div><div class=""monext-payment-byline"">Accéder à votre <a href=""%1"">Centre d'administration Monext</a> afin de gérer votre compte Payline, suivre les transactions ou vérifier les problèmes techniques.</div>"
 "Select payments in your shopping cart. Payline will process your card payments through the Payline Gateway or the widget.","Sélectionnez les paiements dans votre panier. Payline traitera vos paiements par carte via la passerelle Payline ou le widget."
 "Type of Integration","Type d'intégration"
 "Affichage Inshop","Visuel du widget"
@@ -43,9 +43,9 @@
 "Invalid contract","Contrat de paiement non valide"
 "Payline card type logo url does not exists.","Le logo pour le type de paiement n'existe pas"
 "ERROR for order ; payment gateway amount %1 does not match order amount %2.","ERREUR pour la commande; le montant de la passerelle de paiement de %1 ne correspond pas au montant de la commande de %2."
-"Cannot save configuration, payment action "%1" is not compatible with contract "%2"","Sauvegarde impossible, l'action de paiement "%1" n'est pas compatible avec le paiement "%2""
+"Cannot save configuration, payment action ""%1"" is not compatible with contract ""%2""","Sauvegarde impossible, l'action de paiement ""%1"" n'est pas compatible avec le paiement ""%2"""
 "User Error Messages","Messages d'erreur utilisateur"
-"You can see all Payline API <a href="https://docs.payline.com/pages/viewpage.action?pageId=747146993" target="_blank">return codes</a>.","Vous pouvez voir tous les <a href="https://docs.payline.com/pages/viewpage.action?pageId=747146993" target="_blank">codes de retour</a> de l'API Payline."
+"You can see all Payline API <a href=""https://docs.payline.com/pages/viewpage.action?pageId=747146993"" target=""_blank"">return codes</a>.","Vous pouvez voir tous les <a href=""https://docs.payline.com/pages/viewpage.action?pageId=747146993"" target=""_blank"">codes de retour</a> de l'API Payline."
 "Payline Back (01)","Payline Back (01)"
 "Return codes linked to the return of the bank processing.","Codes retour liés au retour de la banque."
 "Payline Front (02)","Payline Front (02)"
@@ -93,9 +93,11 @@ Language,Langue
 "Orders history","Historique des commandes"
 "With PHP SDK superior to 4.68 a failvover mechanism is implemented to bypass potential network issues.","Avec le SDK supérieurs à 4.68, un mécanisme de bascule à la source est branché pour limiter l'impact des erreurs réseaux"
 "Disable failover","Désactivation de la bascule à la source"
-"Refresh Contracts","Raffraichir les contrats"
+"Refresh Contracts","Rafraichir les contrats"
 "Yes","Oui"
 "No","Non"
 "Title","Titre"
 "Enabled", "Actif"
-"You can see all Payline API <a href="https://docs.payline.com/pages/viewpage.action?pageId=747146993" target="_blank">return codes</a>.","Vous pouvez consulter  <a href="https://docs.payline.com/pages/viewpage.action?pageId=747146993" target="_blank">tous les codes retour</a> de l'API Payline."
+"Merchant Name","Merchant Name"
+"Set the same data than in the Payline dashboard. Used for specific contract (ie: EQUENS)","Définissez les mêmes données que dans le tableau de bord Payline. Utilisé pour des contrats spécifiques (ex: EQUENS)"
+"Customer will select card payments and schedule through the Payline Gateway.", "Le client sélectionnera les paiements par carte et planifiera via la passerelle Payline."
