Automatically call refund or reset API on amount error

--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -42,7 +42,7 @@
 "Please select a category mapping...","Choisir une catégorie"
 "Invalid contract","Contrat de paiement non valide"
 "Payline card type logo url does not exists.","Le logo pour le type de paiement n'existe pas"
-"ERROR for order ; payment gateway amount %1 does not match order amount %2.","ERREUR pour la commande; le montant de la passerelle de paiement de %1 ne correspond pas au montant de la commande de %2."
+"Payment gateway amount %1 does not match order amount %2.","Le montant de la passerelle de paiement de %1 ne correspond pas au montant de la commande de %2."
 "Cannot save configuration, payment action ""%1"" is not compatible with contract ""%2""","Sauvegarde impossible, l'action de paiement ""%1"" n'est pas compatible avec le paiement ""%2"""
 "User Error Messages","Messages d'erreur utilisateur"
 "You can see all Payline API <a href=""https://docs.payline.com/pages/viewpage.action?pageId=747146993"" target=""_blank"">return codes</a>.","Vous pouvez voir tous les <a href=""https://docs.payline.com/pages/viewpage.action?pageId=747146993"" target=""_blank"">codes de retour</a> de l'API Payline."
@@ -101,3 +101,5 @@ Language,Langue
 "Merchant Name","Merchant Name"
 "Set the same data than in the Payline dashboard. Used for specific contract (ie: EQUENS)","Définissez les mêmes données que dans le tableau de bord Payline. Utilisé pour des contrats spécifiques (ex: EQUENS)"
 "Customer will select card payments and schedule through the Payline Gateway.", "Le client sélectionnera les paiements par carte et planifiera via la passerelle Payline."
+"Reset transaction %1 for order %2","Annulation de la transaction %1 pour la commande %2"
+"Refund transaction %1 for order %2","Remboursement de la transaction %1 pour la commande %2"
