--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -45,14 +45,17 @@ name,name
 "Please select a category mapping...","Please select a category mapping..."
 "Invalid contract","Invalid contract"
 "Payline card type logo url does not exists.","Payline card type logo url does not exists."
+"Invalid Payment Method","Invalid Payment Method"
+"Payment is not finalized.","Payment is not finalized."
+"Cannot retrieve valid customer cart.","Cannot retrieve valid customer cart."
 "Duplicate detected. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored","Duplicate detected. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored"
 "Tansaction already exist for this order. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored","Tansaction already exist for this order. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored"
 "No authorization transaction found for this order.","No authorization transaction found for this order."
 "No transaction found for this order.","No transaction found for this order."
-"Transaction %s canceled for order %s from Magento Back-Office","Transaction %s canceled for order %s from Magento Back-Office"
+"Transaction %1 canceled for order %s from Magento Back-Office","Transaction %1 canceled for order %2 from Magento Back-Office"
 "Error code %1 => %2","Error code %1 => %2"
 "All payment cycle received","All payment cycle received"
-"Transaction %s refunded for order %s from Magento Back-Office","Transaction %s refunded for order %s from Magento Back-Office"
+"Transaction %1 refunded for order %s from Magento Back-Office","Transaction %1 refunded for order %2 from Magento Back-Office"
 "Reset transaction %1 for order %2","Reset transaction %1 for order %2"
 "Refund transaction %1 for order %2","Refund transaction %1 for order %2"
 "Payment gateway amount %1 does not match order amount %2.","Payment gateway amount %1 does not match order amount %2."
@@ -117,6 +120,8 @@ No,No
 "Renew token","Renew token"
 "Renew token and keep history (beta)","Renew token and keep history (beta)"
 "Recycle existing token (beta)","Recycle existing token (beta)"
+"Payment not set","Payment not set"
+"Config error : Billing occurrences can not be zero","Config error : Billing occurrences can not be zero"
 "Payment method %1 not available in %2","Payment method %1 not available in %2"
 "%1: Captured amount of %2 online.","%1: Captured amount of %2 online."
 "Payment NX/REC in progress","Payment NX/REC in progress"
@@ -151,30 +156,42 @@ No,No
 Environment,Environment
 Language,Language
 "Merchant Name","Merchant Name"
+"Set the same data than in the Payline dashboard. Used for specific contract (ie: EQUENS)","Set the same data than in the Payline dashboard. Used for specific contract (ie: EQUENS)"
 Advanced,Advanced
 "Token usage","Token usage"
+"Manage how to deal with token generation.","Manage how to deal with token generation."
 "Disable failover","Disable failover"
+"With PHP SDK superior to 4.68 a failvover mechanism is implemented to bypass potential network issues.","With PHP SDK superior to 4.68 a failvover mechanism is implemented to bypass potential network issues."
 "Proxy Enabled","Proxy Enabled"
 "Proxy Host","Proxy Host"
 "Proxy Port","Proxy Port"
 "Proxy Login","Proxy Login"
 "Proxy Password","Proxy Password"
 "User Error Messages","User Error Messages"
+"You can see all Payline API <a href=""https://docs.payline.com/pages/viewpage.action?pageId=747146993"" target=""_blank"">return codes</a>.","You can see all Payline API <a href=""https://docs.payline.com/pages/viewpage.action?pageId=747146993"" target=""_blank"">return codes</a>."
 "Payline Back (01)","Payline Back (01)"
+"Return codes linked to the return of the bank processing.","Return codes linked to the return of the bank processing."
 "Payline Front (02)","Payline Front (02)"
+"Return codes linked to the return of Payline processing.","Return codes linked to the return of Payline processing."
 "3DSecure (03)","3DSecure (03)"
+"The return codes of the 3DS module related to authentication and 3DSecure processing.","The return codes of the 3DS module related to authentication and 3DSecure processing."
 "LCLF (04)","LCLF (04)"
+"The return codes of the LCLF module related to Payline anti-fraud rules.","The return codes of the LCLF module related to Payline anti-fraud rules."
 "Default message","Default message"
+"This message can happen when Payline server cannot be reached.","This message can happen when Payline server cannot be reached."
 "Payline Contracts","Payline Contracts"
 Contracts,Contracts
 "Payment solutions","Payment solutions"
 "Payline - Web Payment Cpt","Payline - Web Payment Cpt"
+"Select payments in your shopping cart. Payline will process your card payments through the Payline Gateway or the widget.","Select payments in your shopping cart. Payline will process your card payments through the Payline Gateway or the widget."
 Enabled,Enabled
 "Type of Integration","Type of Integration"
 payline_widget_display,payline_widget_display
 "Custom payment page code","Custom payment page code"
+"ID of a style defined in Payline administration tool.","ID of a style defined in Payline administration tool."
 "Payment Action","Payment Action"
 "Return options","Return options"
+"Page to return when payment is canceled, refused or in error","Page to return when payment is canceled, refused or in error"
 "Enable Wallet","Enable Wallet"
 "Payline order status","Payline order status"
 "Default status captured","Default status captured"
@@ -186,20 +203,23 @@ payline_widget_display,payline_widget_display
 "Default status fraud","Default status fraud"
 "Default status abandoned","Default status abandoned"
 "Payline - Web Payment Nx","Payline - Web Payment Nx"
+"Customer will select card payments and schedule through the Payline Gateway.","Customer will select card payments and schedule through the Payline Gateway."
 "Cost type","Cost type"
 "(hors frais de livraison)","(hors frais de livraison)"
 "Costs amount/percentage","Costs amount/percentage"
 "Redirection message","Redirection message"
 "Advanced settings","Advanced settings"
 "Minimum amount","Minimum amount"
+"To display, check if the cart amount is greater than or equal to the minimum amount","To display, check if the cart amount is greater than or equal to the minimum amount"
 "Billing occurences","Billing occurences"
 "Billing cycle","Billing cycle"
 "Send wallet id","Send wallet id"
 "If wallet id is provided, wallet payment will be available during web payment","If wallet id is provided, wallet payment will be available during web payment"
 "Contracts specific settings","Contracts specific settings"
+"Please fill in the fields in the ""Delivery configuration"" and ""Prefix configuration"" section first and foremost. If you they are not filled in, the Default values will be used.","Please fill in the fields in the ""Delivery configuration"" and ""Prefix configuration"" section first and foremost. If you they are not filled in, the Default values will be used."
 "Delivery configuration","Delivery configuration"
 "Prefix configuration","Prefix configuration"
 "Default values","Default values"
 Category,Category
+"Default category if not set on Magento catalog category attribute ""Payline Category Mapping""","Default category if not set on Magento catalog category attribute ""Payline Category Mapping"""
 "Payline Category Mapping","Payline Category Mapping"
-"This message can happen when Payline server cannot be reached.","This message can happen when Payline server cannot be reached."
