--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -6,8 +6,8 @@
 "Payline Contracts","Contrats Payline"
 "Contracts","Contrats"
 "No transaction found for this order.","Aucune transaction trouvée pour cette commande."
-"Transaction %s canceled for order %s from Magento Back-Office","Annulation de la transaction %s de la commande %s depuis le back office Magento"
-"Transaction %s refunded for order %s from Magento Back-Office","Remboursement de la transaction %s de la commande %s depuis le back office Magento"
+"Transaction %1 canceled for order %2 from Magento Back-Office","Annulation de la transaction %1 de la commande %2 depuis le back office Magento"
+"Transaction %1 refunded for order %2 from Magento Back-Office","Remboursement de la transaction %1 de la commande %2 depuis le back office Magento"
 "There was an error processing your order. Please contact us or try again later.","Une erreur s'est produite lors du traitement de votre commande. Veuillez nous contacter ou réessayer plus tard."
 "Click here if you are not redirected within 10 seconds...","Cliquez ici si vous n'êtes pas redirigé dans les 10 secondes ..."
 "Contracts specific settings","Paramètrages spécifiques pour les contrats"
