--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -48,21 +48,24 @@ name,name
 "Invalid Payment Method","Invalid Payment Method"
 "Payment is not finalized.","Payment is not finalized."
 "Cannot retrieve valid customer cart.","Cannot retrieve valid customer cart."
+"A tansaction already exist for this order. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored","A tansaction already exist for this order. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored"
 "Duplicate detected. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored","Duplicate detected. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored"
-"Tansaction already exist for this order. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored","Tansaction already exist for this order. Payline API call to getWebPaymentDetails with return ""%1 : %2"" was ignored"
-"No authorization transaction found for this order.","No authorization transaction found for this order."
-"No transaction found for this order.","No transaction found for this order."
-"Transaction %1 canceled for order %s from Magento Back-Office","Transaction %1 canceled for order %2 from Magento Back-Office"
-"Error code %1 => %2","Error code %1 => %2"
-"All payment cycle received","All payment cycle received"
-"Transaction %1 refunded for order %s from Magento Back-Office","Transaction %1 refunded for order %2 from Magento Back-Office"
+"Transaction already exists for this order. Payline transaction successfully void or refund.","Transaction already exists for this order. Payline transaction successfully void or refund."
+"Transaction %1 canceled for order %2 from Magento Back-Office","Transaction %1 canceled for order %2 from Magento Back-Office"
+"Transaction %1 refunded for order %2 from Magento Back-Office","Transaction %1 refunded for order %2 from Magento Back-Office"
 "Reset transaction %1 for order %2","Reset transaction %1 for order %2"
 "Refund transaction %1 for order %2","Refund transaction %1 for order %2"
+"No transaction found for this order.","No transaction found for this order."
 "Payment gateway amount %1 does not match order amount %2.","Payment gateway amount %1 does not match order amount %2."
+"Error code %1 => %2","Error code %1 => %2"
+"All payment cycle received","All payment cycle received"
 ". ' : Payment method %1 not available in %2'",". ' : Payment method %1 not available in %2'"
 Authorize,Authorize
 "Authorize and Capture","Authorize and Capture"
 "Cannot save configuration, payment action ""%1"" is not compatible with contract ""%2""","Cannot save configuration, payment action ""%1"" is not compatible with contract ""%2"""
+"Product ID","Product ID"
+"Product SKU","Product SKU"
+"Attribute Set","Attribute Set"
 Daily,Daily
 Weekly,Weekly
 "Twice a month","Twice a month"
@@ -114,6 +117,10 @@ Finn,Finn
 "When order status is ""%1""","When order status is ""%1"""
 No,No
 "Back to the shop","Back to the shop"
+"Due day","Due day"
+"After a period","After a period"
+"After two periods","After two periods"
+"No limit","No limit"
 "Renew token (default)","Renew token (default)"
 "Renew token and keep history","Renew token and keep history"
 "Recycle existing token","Recycle existing token"
@@ -185,8 +192,10 @@ Contracts,Contracts
 "Payline - Web Payment Cpt","Payline - Web Payment Cpt"
 "Select payments in your shopping cart. Payline will process your card payments through the Payline Gateway or the widget.","Select payments in your shopping cart. Payline will process your card payments through the Payline Gateway or the widget."
 Enabled,Enabled
-"Type of Integration","Type of Integration"
-payline_widget_display,payline_widget_display
+"Integration type","Integration type"
+"Template name","Template name"
+"ACS 3DS iframe integration","ACS 3DS iframe integration"
+"For IFRAME integration, you need to make sure that the CSP is correctly configured and won't block assets from ACS sites.","For IFRAME integration, you need to make sure that the CSP is correctly configured and won't block assets from ACS sites."
 "Custom payment page code","Custom payment page code"
 "ID of a style defined in Payline administration tool.","ID of a style defined in Payline administration tool."
 "Payment Action","Payment Action"
@@ -215,6 +224,20 @@ payline_widget_display,payline_widget_display
 "Billing cycle","Billing cycle"
 "Send wallet id","Send wallet id"
 "If wallet id is provided, wallet payment will be available during web payment","If wallet id is provided, wallet payment will be available during web payment"
+"Payline - Web Payment Rec","Payline - Web Payment Rec"
+"This payment method allows merchants to offer buyers payment for purchases in several installments.","This payment method allows merchants to offer buyers payment for purchases in several installments."
+"The date of the first expiry","The date of the first expiry"
+"Day when the deadlines must be processed. Choose 0 so that the debits are made on the same day as the first order.","Day when the deadlines must be processed. Choose 0 so that the debits are made on the same day as the first order."
+"Periodicity of payments","Periodicity of payments"
+"Number of payments (allow calculate endDate)","Number of payments (allow calculate endDate)"
+"Allowed products","Allowed products"
+"Allowed products IDs","Allowed products IDs"
+"Add IDs separated by semicolon.","Add IDs separated by semicolon."
+"Allowed products SKUs","Allowed products SKUs"
+"Add SKUs separated by semicolon.","Add SKUs separated by semicolon."
+"Status when credit card schedule is expired","Status when credit card schedule is expired"
+"Status when payline schedule alert","Status when payline schedule alert"
+"Automate invoice creation","Automate invoice creation"
 "Contracts specific settings","Contracts specific settings"
 "Please fill in the fields in the ""Delivery configuration"" and ""Prefix configuration"" section first and foremost. If you they are not filled in, the Default values will be used.","Please fill in the fields in the ""Delivery configuration"" and ""Prefix configuration"" section first and foremost. If you they are not filled in, the Default values will be used."
 "Delivery configuration","Delivery configuration"
@@ -223,8 +246,4 @@ payline_widget_display,payline_widget_display
 Category,Category
 "Default category if not set on Magento catalog category attribute ""Payline Category Mapping""","Default category if not set on Magento catalog category attribute ""Payline Category Mapping"""
 "Payline Category Mapping","Payline Category Mapping"
-"Integration type","Integration type"
-"Template name","Template name"
-"ACS 3DS iframe integration","ACS 3DS iframe integration"
-"For IFRAME integration, you need to make sure that the CSP is correctly configured and won't block assets from ACS sites.","For IFRAME integration, you need to make sure that the CSP is correctly configured and won't block assets from ACS sites."
 
