Add translation, fix cart return on user cancell
Changelog

Remove property type

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,3 +1,9 @@
+"Transaction cancelled by user","Transaction cancelled by user"
+"Error with bank transaction process","Error with bank transaction process"
+"Error with transaction process","Error with transaction process"
+"Error with 3DSecure process","Error with 3DSecure process"
+"Error with payment validation rules","Error with payment validation rules"
+"Error when processing payment","Error when processing payment"
 Configure,Configure
 Close,Close
 "Shipping method","Shipping method"
