--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -252,4 +252,6 @@ Enabled,Enabled
 Category,Category
 "Default category if not set on Magento catalog category attribute ""Payline Category Mapping""","Default category if not set on Magento catalog category attribute ""Payline Category Mapping"""
 "Payline Category Mapping","Payline Category Mapping"
+"Smartdisplay parameter","Smartdisplay parameter"
+"Added in doWebPayment privateData as display.rule.param","Added in doWebPayment privateData as display.rule.param"
 
