--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -252,8 +252,12 @@ Configure,Configurer
 "Category","Category"
 "Default category if not set on Magento catalog category attribute ""Payline Category Mapping""","Catégorie par défaut si non définie dans l'attribut de catégorie Magento ""Mapping des catégories Payline"""
 "Payline Category Mapping","Mapping des catégories Payline"
+"You must define the notification URL into your point of sale configuration. %s The notification URL is: %s %s %s","Vous devez définir l'URL pour les notifications dans la configuration de votre point de vente. %s L'URL à spécifier est : %s %s %s"
+"When editing the URL, please be sure to check all the checkbox below the text input too.","Lors de la saisie de l'URL, veillez à cocher toutes les cases se trouvant à la suite."
 "Smartdisplay parameter","Paramètre Smartdisplay"
 "Added in doWebPayment privateData as display.rule.param","Ajouté dans le privateData du doWebPayment en tant que display.rule.param"
+"You must define the notification URL into your point of sale configuration. %s The notification URL is: %s %s %s","Vous devez définir l'URL pour les notifications dans la configuration de votre point de vente. %s L'URL à spécifier est : %s %s %s"
+"When editing the URL, please be sure to check all the checkbox below the text input too.","Lors de la saisie de l'URL, veillez à cocher toutes les cases se trouvant à la suite."
 "Your payment has been refused","Votre paiement a été refusé"
 "Your payment has been cancelled","Votre paiement a été annulé"
 "Your payment is in error","Votre paiement est en erreur"
